# zk-freighter

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  PRODUCT_SPEC.md  README.md  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tmp-icon.html
circuits/: ATTRIBUTION.md  README.md
contracts/: Cargo.toml  README.md
contracts/confidential-token/: Cargo.toml
contracts/confidential-token/src/: lib.rs  test.rs
contracts/confidential-token/test_snapshots/test/: constructor_stores_config.1.json  deposit_pulls_underlying_and_merge_runs.1.json  deposit_rejects_negative_amount.1.json  deposit_requires_recipient_registered.1.json  register_rejects_mismatched_addr_f.1.json  register_requires_contract_field_set.1.json  register_verifies_binds_addr_f_and_stores.1.json  set_contract_field_is_single_shot.1.json  transfer_rejects_non_canonical_payload.1.json  transfer_requires_recipient_registered.1.json  transfer_to_self_debits_and_credits_without_inflation.1.json  transfer_verifies_overwrites_sender_and_credits_recipient.1.json  unregistered_account_has_no_state.1.json  withdraw_rejects_non_canonical_payload.1.json  withdraw_requires_registered_account.1.json  withdraw_verifies_overwrites_spendable_and_pays_out.1.json
deploy/: bootnode-mainnet.env  bootnode.env  docs.env  funding-api.env  landing.env  web.env
docs/: GLOSSARY.md  START-HERE-concept.md  SUBMISSION-PACKAGE.md  VERIFIED-FACTS.md  verified-facts.json
scripts/: cctp-bridge-source-flow.ts  cctp-bridge-source-support.test.ts  cctp-bridge-source-support.ts  cdp-client.mjs  (+22 more)
(+468 files in other folders)
